# gramcheck

./: .gitignore  README.md  duck-test  example.txt  gc  gramcheck.py  main.py  pyproject.toml
